# CARAPI

./: .dockerignore  .gitignore  Dockerfile  api.http  compose.yaml  file_path  hello.py  logVerbose.py  middleware.py  nginx.conf  pyproject.toml
app/: app.py  db.py
frontend/ecart/: index.html  package-lock.json  package.json
frontend/ecart/src/: App.css  App.jsx  CodeBlock.jsx  Delete.jsx  Documentation.css  Documentation.jsx  Form.jsx  Home.jsx  Login.jsx  Update.jsx  context.jsx  index.css  itemView.jsx  main.jsx  newApp.jsx  newHome.jsx  newItem.jsx  registration.jsx  singleCar.jsx
migrations/: env.py
migrations/versions/: e717ac9bd23a_shift_to_postgres.py  fd6815339ce8_image_feild_added.py
tests/: conftest.py  test_endpoints.py
